[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ui/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://particles/Effect.tscn" type="PackedScene" id=4]

[sub_resource type="Theme" id=14]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.8, 0, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=7]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Message:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 64 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Message:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Message:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Message:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "init"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Message:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 64 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Message:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "show_message"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath("Message:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Message:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Message:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreBox/ScoreVStack/ScoreHStack/BonusVStack/Bonus:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScoreBox/ScoreVStack/ScoreHStack/BonusVStack/x:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScoreBox/ScoreVStack/ScoreHStack/BonusVStack/x:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScoreBox/ScoreVStack/ScoreHStack/BonusVStack/Bonus:custom_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "bonus"
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreBox/ScoreVStack/ScoreHStack/BonusVStack/Bonus:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScoreBox/ScoreVStack/ScoreHStack/BonusVStack/Bonus:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.8, 0, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScoreBox/ScoreVStack/ScoreHStack/BonusVStack/x:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.8, 0, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScoreBox/ScoreVStack/ScoreHStack/BonusVStack/x:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreBox/ScoreVStack/ScoreHStack/ScoreContainer/Score:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScoreBox/ScoreVStack/ScoreHStack/ScoreContainer/Score:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "score"
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreBox/ScoreVStack/ScoreHStack/ScoreContainer/Score:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScoreBox/ScoreVStack/ScoreHStack/ScoreContainer/Score:custom_colors/font_color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.8, 0, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Effect:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Effect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 451, 28 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "score_effect"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Effect:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.29, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Effect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 443, 31 ), Vector2( -17, 76 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreBox" type="MarginContainer" parent="."]
anchor_right = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ScoreVStack" type="VBoxContainer" parent="ScoreBox"]
margin_left = 20.0
margin_top = 20.0
margin_right = 460.0
margin_bottom = 114.0

[node name="ProgressBar" type="ProgressBar" parent="ScoreBox/ScoreVStack"]
margin_right = 440.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
theme = SubResource( 14 )
custom_styles/fg = SubResource( 17 )
custom_styles/bg = SubResource( 16 )
max_value = 10.0
step = 1.0
percent_visible = false

[node name="ScoreHStack" type="HBoxContainer" parent="ScoreBox/ScoreVStack"]
margin_top = 22.0
margin_right = 440.0
margin_bottom = 94.0
size_flags_horizontal = 3
alignment = 1

[node name="BonusVStack" type="HBoxContainer" parent="ScoreBox/ScoreVStack/ScoreHStack"]
margin_right = 198.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( -257, -5 )
size_flags_horizontal = 3
custom_constants/separation = -3

[node name="Bonus" type="Label" parent="ScoreBox/ScoreVStack/ScoreHStack/BonusVStack"]
margin_right = 19.0
margin_bottom = 48.0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "1"
align = 2

[node name="x" type="Label" parent="ScoreBox/ScoreVStack/ScoreHStack/BonusVStack"]
margin_left = 16.0
margin_right = 36.0
margin_bottom = 72.0
size_flags_vertical = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "x"

[node name="ScoreContainer" type="HBoxContainer" parent="ScoreBox/ScoreVStack/ScoreHStack"]
margin_left = 202.0
margin_right = 440.0
margin_bottom = 72.0
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="ScoreBox/ScoreVStack/ScoreHStack/ScoreContainer"]
margin_right = 115.0
margin_bottom = 72.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "Score"

[node name="Score" type="Label" parent="ScoreBox/ScoreVStack/ScoreHStack/ScoreContainer"]
margin_left = 119.0
margin_right = 238.0
margin_bottom = 72.0
size_flags_vertical = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "100"

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -120.0
margin_bottom = 120.0
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Message"
align = 1
valign = 1
clip_text = true

[node name="MessageAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/init = SubResource( 5 )
anims/show_message = SubResource( 6 )

[node name="BonusAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/bonus = SubResource( 11 )

[node name="ScoreAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/score = SubResource( 13 )

[node name="Tween" type="Tween" parent="."]

[node name="Effect" parent="." instance=ExtResource( 4 )]
position = Vector2( 451, 28 )
emitting = false

[node name="EffectAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 18 )
anims/score_effect = SubResource( 19 )

[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
